--- a/chat.html
+++ b/chat.html
@@ -27,7 +27,7 @@
         <a href="chats.html"> <i class="fa-solid fa-angle-left fa-3x"></i></a>
       </div>
       <div class="alt-header__column">
-        <h1 class="alt-header__title">니꼬</h1>
+        <h1 class="alt-header__title">Gerrard</h1>
       </div>
       <div class="alt-header__column">
         <span><i class="fa-solid fa-magnifying-glass fa-lg"></i></span>
